# API_auth

./: README.md  docker-compose.yaml  pyproject.toml
src/: .example.env  main.py
src/admin_panel/: auth.py  view.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_06_1849-2487e27c0b85_create_user_table.py
src/api/api_v1/: __init__.py  auth.py  auth_dependensies.py
src/api/api_v1/crud/: auth_crud.py
src/core/: config.py
src/core/models/: base.py  user.py
src/core/models/mixins/: int_user_pk.py
src/core/schemas/: user.py
